# vivid-vector-db

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/vivid-cli/: Cargo.toml
crates/vivid-cli/src/: main.rs
crates/vivid-core/: Cargo.toml
crates/vivid-core/benches/: vector_bench.rs
crates/vivid-core/src/: lib.rs  simd.rs
crates/vivid-index/: Cargo.toml
crates/vivid-index/benches/: index_bench.rs
crates/vivid-index/src/: hnsw.rs  lib.rs
crates/vivid-python/: Cargo.toml  test.py
crates/vivid-python/src/: lib.rs
local-tests/: run_cli_tests.ps1
