[package]
name = "vivid-core"
version = "0.1.0"
edition = "2024"
description = "Core vector mathematics and space metrics for Vivid"

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }

[features]
nightly = []

[[bench]]
name = "vector_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
